// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NavMenu renders successfully 1`] = `
<ul
  className="nav navbar-nav main-nav"
>
  <li
    className="link-dashboard"
  />
  <li
    className="link-public"
  >
    <NavLink
      className="nav-link"
      to="/public/datasets"
    >
      <span
        className="link-name"
      >
        Public Dashboard
      </span>
    </NavLink>
  </li>
  <li
    className="link-support"
  >
    <a
      className="nav-link"
      onClick={[Function]}
    >
      <span
        className="link-name"
      >
        Support
      </span>
    </a>
  </li>
  <li
    className="link-faq"
  >
    <NavLink
      className="nav-link"
      to="/faq"
    >
      <span
        className="link-name"
      >
        faq
      </span>
    </NavLink>
  </li>
  <li
    className="link-admin"
  />
  <li
    className="link-dashboard"
  />
</ul>
`;

exports[`NavMenu renders without "eventKey" warnings 1`] = `
<NavMenu
  isLoggedIn={null}
  loading={false}
>
  <ul
    className="nav navbar-nav main-nav"
  >
    <li
      className="link-dashboard"
    />
    <li
      className="link-public"
    >
      <NavLink
        className="nav-link"
        to="/public/datasets"
      />
    </li>
    <li
      className="link-support"
    >
      <a
        className="nav-link"
        onClick={[Function]}
      >
        <span
          className="link-name"
        >
          Support
        </span>
      </a>
    </li>
    <li
      className="link-faq"
    >
      <NavLink
        className="nav-link"
        to="/faq"
      />
    </li>
    <li
      className="link-admin"
    />
    <li
      className="link-dashboard"
    />
  </ul>
</NavMenu>
`;
